external-crates/move/crates/move-compiler/tests/move_2024/typing/loop_break_ref_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04006]: invalid subtype
  ┌─ tests/move_2024/typing/loop_break_ref_invalid.move:7:5
  │
3 │ fun test(a: &u64): &mut u64 {
  │             ----   -------- Expected: '&mut u64'
  │             │       
  │             Given: '&u64'
  ·
7 │     x
  │     ^ Invalid return expression
